Bug 828815 - Restore functionality of | SVGElement[onxxx] = Function. r=bz, a=bajaj